attempting to add notebook

--- a/python_tips.ipynb
+++ b/python_tips.ipynb
@@ -420,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4502050352\n"
+      "4363715424\n"
      ]
     }
    ],
@@ -461,8 +461,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4502051576\n",
-      "4502051576\n",
+      "4363715352\n",
+      "4363715352\n",
       "{'Caleb': 5, 'Erin': 13}\n"
      ]
     }
@@ -493,8 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4465410000\n",
-      "4465409712\n",
+      "4327108560\n",
+      "4327108272\n",
       "1\n"
      ]
     }
@@ -589,7 +589,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4499791688 4499744520\n"
+      "4360968392 4361203848\n"
      ]
     }
    ],
@@ -616,7 +616,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4499283656 4497634440\n"
+      "4360735176 4363830088\n"
      ]
     }
    ],
@@ -1102,13 +1102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to do nothing in Python with pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## How to do nothing in Python with pass\n",
     "Python doesn't have { }, so this is how we do the equiv in Python"
    ]
   },
@@ -1138,7 +1132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['dog', 'chicken', 'cat', 'bird']\n"
+      "['cat', 'bird', 'chicken', 'dog']\n"
      ]
     }
    ],
