--- a/python_tips.ipynb
+++ b/python_tips.ipynb
@@ -427,7 +427,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4363715424\n"
+      "4427975056\n"
      ]
     }
    ],
@@ -461,8 +461,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4363715352\n",
-      "4363715352\n",
+      "4427978648\n",
+      "4427978648\n",
       "{'Caleb': 5, 'Erin': 13}\n"
      ]
     }
@@ -493,8 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4327108560\n",
-      "4327108272\n",
+      "4391374800\n",
+      "4391374512\n",
       "1\n"
      ]
     }
@@ -589,7 +589,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4360968392 4361203848\n"
+      "4425202504 4424992456\n"
      ]
     }
    ],
@@ -616,7 +616,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4360735176 4363830088\n"
+      "4425483528 4425202760\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cat', 'bird', 'chicken', 'dog']\n"
+      "['bird', 'cat', 'chicken', 'dog']\n"
      ]
     }
    ],
@@ -1518,6 +1518,827 @@
     "#notice important sections: \n",
     "#for pair in pairs\n",
     "#for item in pair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3125\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Container:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "    \n",
+    "def calculate(input):\n",
+    "    input.data **= 5\n",
+    "    \n",
+    "container = Container(5)\n",
+    "calculate(container)\n",
+    "print(container.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare identity with is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4428199528 4428199472\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "c1 = Container(5)\n",
+    "c2 = Container(5)\n",
+    "print(id(c1), id(c2))\n",
+    "print(id(c1) == id(c2)) \n",
+    "\n",
+    "print(c1 is c2) #better code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add a method dynamically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function __eq__ at 0x107ee9048>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def __eq__(self, other):\n",
+    "    return self.data == other.data\n",
+    "\n",
+    "Container.__eq__ = __eq__\n",
+    "\n",
+    "print(Container.__eq__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare by Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "c1 = Container(5)\n",
+    "c2 = Container(5)\n",
+    "\n",
+    "print(c1 == c2) #same values\n",
+    "print(c1 is c2) #different objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class parenthesis optional but not function parenthesis\n",
+    "The () are optional for classes. Only needed if you're inheriting. However, function () are always required when defining."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Container():\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "class Container: \n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "#def function:\n",
+    "#    print(\"oopsies\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get current date and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-11-28 15:31:14.250430\n",
+      "28 11 2020 15 31 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "print(now)\n",
+    "print(now.day, now.month, now.year, now.hour, now.minute, now.second)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Countdown\n",
+    "You can do this in a loop if you need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 days, 8:28:45.746304\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "end = datetime(2020, 12, 1)\n",
+    "print(end-now) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elapsed time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.timedelta'>\n",
+      "0:00:02.399230\n",
+      "2 399230\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "start = datetime.now()\n",
+    "\n",
+    "for i in range(100_000_000): #to pass time\n",
+    "    pass\n",
+    "\n",
+    "end = datetime.now()\n",
+    "\n",
+    "print(type(end-start))\n",
+    "elapsed = end-start\n",
+    "print(elapsed)\n",
+    "print(elapsed.seconds, elapsed.microseconds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parentheses for operations with object members\n",
+    "operator precedence - dot operator comes ahead of +/- operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n",
+      "Wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "now = datetime.now()\n",
+    "then = datetime.now()\n",
+    "\n",
+    "elapsed = (then-now).microseconds\n",
+    "print(elapsed)\n",
+    "\n",
+    "try:\n",
+    "    print(then-now.microseconds)\n",
+    "except:\n",
+    "    print(\"Wrong\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Runtime error vs syntax error\n",
+    "Syntax errors are impossible to be correct and will prevent execution  \n",
+    "Runtime errors deal with incorrect data found during runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "#def function:\n",
+    "#    print('wrong syntax')\n",
+    "    \n",
+    "try:\n",
+    "    print(then-now.microseconds)\n",
+    "except:\n",
+    "    print(\"Wrong\")  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get a random number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "print(randint(0, 12)) #inclusive #inclusive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import with Alias\n",
+    "This capability came in handy for me when I needed a module  \n",
+    "to be a specific name for my code to work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "def randint():\n",
+    "    return 52\n",
+    "    \n",
+    "from random import randint as r\n",
+    "    \n",
+    "print(randint(), r(0, 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generators and Yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3\n",
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 2584 4181 "
+     ]
+    }
+   ],
+   "source": [
+    "def fib(count):\n",
+    "    a, b = 0, 1\n",
+    "    while count:\n",
+    "        yield a\n",
+    "        a, b, = b, b + a\n",
+    "        count -= 1\n",
+    "\n",
+    "\n",
+    "gen = fib(100)\n",
+    "print(next(gen), next(gen), next(gen), next(gen), next(gen))\n",
+    "\n",
+    "for i in fib(20):\n",
+    "    print(i, end=\" \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## infinate number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inf\n",
+      "inf inf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "#inf = (float('inf')) #other way without math.\n",
+    "print(math.inf)\n",
+    "\n",
+    "inf = math.inf\n",
+    "print(inf, inf-1) #always infinity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Infinate generator\n",
+    "You could make an infinate loop with a yield or use float('inf')) as the counter for more versatility  \n",
+    "(You can use a smaller number if you desire a certain number of elements)  \n",
+    "Bounded generator was used in documentation - https://wiki.python.org/moin/Generators  \n",
+    "This stopping point allows you to do things like get the sum."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 "
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def fib(count):\n",
+    "    a, b = 0, 1\n",
+    "    while count:\n",
+    "        yield a\n",
+    "        a, b, = b, b + a\n",
+    "        count -= 1\n",
+    "\n",
+    "f = fib(math.inf)\n",
+    "for i in f:\n",
+    "    if i >= 200: break\n",
+    "    print(i, end=\" \")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## list from generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 1.0, 1.0, 1.414, 1.732, 2.236, 2.828, 3.606, 4.583, 5.831]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def fib(count):\n",
+    "    a, b = 0, 1\n",
+    "    while count:\n",
+    "        yield a\n",
+    "        a, b, = b, b + a\n",
+    "        count -= 1\n",
+    "        \n",
+    "f = fib(10)\n",
+    "data = [round(math.sqrt(i), 3) for i in f]\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## itertools for simple infinate generator\n",
+    "The generator function could be simpler without having to take a max count property  \n",
+    "This can be done easily with itertools. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def fib():\n",
+    "    a, b = 0, 1\n",
+    "    while True:\n",
+    "        yield a\n",
+    "        a, b, = b, b + a\n",
+    "        \n",
+    "print(list(itertools.islice(fib(), 20)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterate through custom type with __iter__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, next_node=None):\n",
+    "        self.data = data\n",
+    "        self.next = next_node\n",
+    "\n",
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self, start):\n",
+    "        self.start = start\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        node = self.start\n",
+    "        while node:\n",
+    "            yield node\n",
+    "            node = node.next\n",
+    "            \n",
+    "ll = LinkedList(Node(5, Node(10, Node(15, Node(20)))))\n",
+    "for node in ll:\n",
+    "    print(node.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Falsey for custom types (not)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "4\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(not []) #true because it's empty\n",
+    "print(len([]) == 0) #This is how not is evaluated\n",
+    "\n",
+    "def __len__(self):\n",
+    "        count = 0\n",
+    "        for i in self:\n",
+    "            count += 1\n",
+    "        return count\n",
+    "    \n",
+    "\n",
+    "LinkedList.__len__ = __len__\n",
+    "            \n",
+    "    \n",
+    "ll = LinkedList(Node(5, Node(10, Node(15, Node(20)))))\n",
+    "print(len(ll))\n",
+    "ll = LinkedList(None)\n",
+    "print(not ll)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine two lists as a list of lists. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Caleb', 100), ('Corey', 250), ('Chris', 30), ('Samantha', 600)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Caleb', 'Corey', 'Chris', 'Samantha']\n",
+    "points = [100, 250, 30, 600]\n",
+    "\n",
+    "zipped = list(zip(names, points))\n",
+    "\n",
+    "print(zipped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert list of tuples to list of lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Caleb', 100], ['Corey', 250], ['Chris', 30], ['Samantha', 600]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Caleb', 'Corey', 'Chris', 'Samantha']\n",
+    "points = [100, 250, 30, 600]\n",
+    "\n",
+    "zipped = list(zip(names, points))\n",
+    "\n",
+    "data = [[item[0], item[1]] for item in zipped]\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preserving all data when zipping with zip_longest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Caleb', 100), ('Corey', 250), ('Chris', 30), ('Samantha', 600)]\n",
+      "[('Caleb', 100), ('Corey', 250), ('Chris', 30), ('Samantha', 600), ('Hannah', None), ('Kelly', None)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Caleb', 'Corey', 'Chris', 'Samantha', \"Hannah\", \"Kelly\"]\n",
+    "points = [100, 250, 30, 600]\n",
+    "zipped = list(zip(names, points))\n",
+    "print(zipped)\n",
+    "\n",
+    "from itertools import zip_longest\n",
+    "names = ['Caleb', 'Corey', 'Chris', 'Samantha', \"Hannah\", \"Kelly\"]\n",
+    "points = [100, 250, 30, 600]\n",
+    "\n",
+    "zipped = list(zip_longest(names, points))\n",
+    "\n",
+    "print(zipped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Default Arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Caleb', 5], ['erin', None]]\n",
+      "[['Caleb', 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zip_lists(list1, list2, longest=True):\n",
+    "    if longest:\n",
+    "        from itertools import zip_longest\n",
+    "        zipped = list(zip_longest(list1, list2))\n",
+    "    else:\n",
+    "        zipped = list(zip(list1, list2))\n",
+    "    \n",
+    "    final_list = [[item[0], item[1]] for item in zipped]\n",
+    "    \n",
+    "    return final_list\n",
+    "    \n",
+    "print(zip_lists([\"Caleb\", \"erin\"], [5]))\n",
+    "print(zip_lists([\"Caleb\", \"erin\"], [5], longest=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keyword Arguments\n",
+    "\n",
+    "When you have default values, you can pass arugments by name\n",
+    "positional arguments must remain on the left\n",
+    "You can pass named arguments in any order and can skip them even."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[None, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zip_lists(list1=[], list2=[], longest=True):\n",
+    "    if longest:\n",
+    "        from itertools import zip_longest\n",
+    "        zipped = list(zip_longest(list1, list2))\n",
+    "    else:\n",
+    "        zipped = list(zip(list1, list2))\n",
+    "    \n",
+    "    final_list = [[item[0], item[1]] for item in zipped]\n",
+    "    \n",
+    "    return final_list\n",
+    "\n",
+    "\n",
+    "print(zip_lists(longest=True, list2=[5]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the Python version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from platform import python_version\n",
+    "\n",
+    "print(python_version())"
    ]
   }
  ],
