improve code design

--- a/python_tips.ipynb
+++ b/python_tips.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x, y = 5, 10\n",
     "print(x, y)"
@@ -41,17 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[91mError: This is \u001b[96mcyan. \u001b[92mContinue?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"\\033[91mError: This is \\033[96mcyan. \\033[92mContinue?\")"
    ]
@@ -65,17 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3125\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5**5\n",
     "print(x)"
@@ -427,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4427975056\n"
+      "140314435257344\n"
      ]
     }
    ],
@@ -461,8 +437,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4427978648\n",
-      "4427978648\n",
+      "140314974565824\n",
+      "140314974565824\n",
       "{'Caleb': 5, 'Erin': 13}\n"
      ]
     }
@@ -493,8 +469,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4391374800\n",
-      "4391374512\n",
+      "140314971138640\n",
+      "140314971138352\n",
       "1\n"
      ]
     }
@@ -589,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4425202504 4424992456\n"
+      "140313360856896 140313360857344\n"
      ]
     }
    ],
@@ -616,7 +592,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4425483528 4425202760\n"
+      "140313360869184 140313360868224\n"
      ]
     }
    ],
@@ -1132,7 +1108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bird', 'cat', 'chicken', 'dog']\n"
+      "['chicken', 'cat', 'dog', 'bird']\n"
      ]
     }
    ],
@@ -1562,7 +1538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4428199528 4428199472\n",
+      "140314974583056 140314974582144\n",
       "False\n",
       "False\n"
      ]
@@ -1593,7 +1569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function __eq__ at 0x107ee9048>\n"
+      "<function __eq__ at 0x7f9da03a1160>\n"
      ]
     }
    ],
@@ -1677,8 +1653,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-11-28 15:31:14.250430\n",
-      "28 11 2020 15 31 14\n"
+      "2020-11-29 00:36:58.981603\n",
+      "29 11 2020 0 36 58\n"
      ]
     }
    ],
@@ -1706,7 +1682,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 days, 8:28:45.746304\n"
+      "1 day, 23:23:01.013681\n"
      ]
     }
    ],
@@ -1734,8 +1710,8 @@
      "output_type": "stream",
      "text": [
       "<class 'datetime.timedelta'>\n",
-      "0:00:02.399230\n",
-      "2 399230\n"
+      "0:00:02.760152\n",
+      "2 760152\n"
      ]
     }
    ],
@@ -1771,7 +1747,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42\n",
+      "27\n",
       "Wrong\n"
      ]
     }
@@ -1838,7 +1814,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "4\n"
      ]
     }
    ],
@@ -1865,7 +1841,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52 28\n"
+      "52 54\n"
      ]
     }
    ],
@@ -2198,7 +2174,7 @@
     "\n",
     "zipped = list(zip(names, points))\n",
     "\n",
-    "data = [[item[0], item[1]] for item in zipped]\n",
+    "data = [list(item) for item in zipped]\n",
     "print(data)"
    ]
   },
@@ -2247,32 +2223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Caleb', 5], ['erin', None]]\n",
-      "[['Caleb', 5]]\n"
+      "[['Caleb', 100], ['Corey', 250], ['Chris', 30], ['Samantha', 600], ['Hannah', None], ['Kelly', None]]\n"
      ]
     }
    ],
    "source": [
-    "def zip_lists(list1, list2, longest=True):\n",
+    "from itertools import zip_longest\n",
+    "\n",
+    "\n",
+    "def zip_lists(list1=[], list2=[], longest=True):\n",
     "    if longest:\n",
-    "        from itertools import zip_longest\n",
-    "        zipped = list(zip_longest(list1, list2))\n",
+    "        return [list(item) for item in zip_longest(list1, list2)]\n",
     "    else:\n",
-    "        zipped = list(zip(list1, list2))\n",
+    "        return [list(item) for item in zip(list1, list2)]\n",
     "    \n",
-    "    final_list = [[item[0], item[1]] for item in zipped]\n",
-    "    \n",
-    "    return final_list\n",
-    "    \n",
-    "print(zip_lists([\"Caleb\", \"erin\"], [5]))\n",
-    "print(zip_lists([\"Caleb\", \"erin\"], [5], longest=False))"
+    "names = ['Caleb', 'Corey', 'Chris', 'Samantha', \"Hannah\", \"Kelly\"]\n",
+    "points = [100, 250, 30, 600]\n",
+    "\n",
+    "print(zip_lists(names, points))"
    ]
   },
   {
@@ -2288,31 +2263,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[None, 5]]\n"
+      "[[None, 'Caleb']]\n"
      ]
     }
    ],
    "source": [
+    "from itertools import zip_longest\n",
+    "\n",
+    "\n",
     "def zip_lists(list1=[], list2=[], longest=True):\n",
     "    if longest:\n",
-    "        from itertools import zip_longest\n",
-    "        zipped = list(zip_longest(list1, list2))\n",
+    "        return [list(item) for item in zip_longest(list1, list2)]\n",
     "    else:\n",
-    "        zipped = list(zip(list1, list2))\n",
-    "    \n",
-    "    final_list = [[item[0], item[1]] for item in zipped]\n",
-    "    \n",
-    "    return final_list\n",
+    "        return [list(item) for item in zip(list1, list2)]\n",
     "\n",
     "\n",
-    "print(zip_lists(longest=True, list2=[5]))"
+    "print(zip_lists(longest=True, list2=['Caleb']))"
    ]
   },
   {
@@ -2331,7 +2304,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.7.3\n"
+      "3.9.0\n"
      ]
     }
    ],
@@ -2358,7 +2331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
