add in title i missed

--- a/python_tips.ipynb
+++ b/python_tips.ipynb
@@ -1497,6 +1497,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wrapping a Primitive to change within function\n",
+    "You can also use a list for simplicity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
