--- a/python_tips.ipynb
+++ b/python_tips.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 10\n"
+     ]
+    }
+   ],
    "source": [
     "x, y = 5, 10\n",
     "print(x, y)"
@@ -33,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91mError: This is \u001b[96mcyan. \u001b[92mContinue?\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"\\033[91mError: This is \\033[96mcyan. \\033[92mContinue?\")"
    ]
@@ -49,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3125\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5**5\n",
     "print(x)"
@@ -403,7 +427,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140314435257344\n"
+      "140479393791744\n"
      ]
     }
    ],
@@ -437,8 +461,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140314974565824\n",
-      "140314974565824\n",
+      "140479393791904\n",
+      "140479393791904\n",
       "{'Caleb': 5, 'Erin': 13}\n"
      ]
     }
@@ -469,8 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140314971138640\n",
-      "140314971138352\n",
+      "4311143040\n",
+      "4311142752\n",
       "1\n"
      ]
     }
@@ -565,7 +589,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140313360856896 140313360857344\n"
+      "140479393918480 140479393910944\n"
      ]
     }
    ],
@@ -592,7 +616,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140313360869184 140313360868224\n"
+      "140479393912224 140479393916880\n"
      ]
     }
    ],
@@ -1108,7 +1132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chicken', 'cat', 'dog', 'bird']\n"
+      "['chicken', 'bird', 'dog', 'cat']\n"
      ]
     }
    ],
@@ -1546,7 +1570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140314974583056 140314974582144\n",
+      "140479253959632 140479253959504\n",
       "False\n",
       "False\n"
      ]
@@ -1577,7 +1601,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function __eq__ at 0x7f9da03a1160>\n"
+      "<function __eq__ at 0x7fc3e0074680>\n"
      ]
     }
    ],
@@ -1661,8 +1685,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-11-29 00:36:58.981603\n",
-      "29 11 2020 0 36 58\n"
+      "2020-12-03 14:08:16.251001\n",
+      "3 12 2020 14 8 16\n"
      ]
     }
    ],
@@ -1690,7 +1714,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 day, 23:23:01.013681\n"
+      "-3 days, 9:51:43.745464\n"
      ]
     }
    ],
@@ -1718,8 +1742,8 @@
      "output_type": "stream",
      "text": [
       "<class 'datetime.timedelta'>\n",
-      "0:00:02.760152\n",
-      "2 760152\n"
+      "0:00:02.298135\n",
+      "2 298135\n"
      ]
     }
    ],
@@ -1755,7 +1779,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n",
+      "16\n",
       "Wrong\n"
      ]
     }
@@ -1849,7 +1873,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52 54\n"
+      "52 1\n"
      ]
     }
    ],
@@ -1903,7 +1927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## infinate number"
+    "## infinite number"
    ]
   },
   {
@@ -1933,8 +1957,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Infinate generator\n",
-    "You could make an infinate loop with a yield or use float('inf')) as the counter for more versatility  \n",
+    "## Infinite generator\n",
+    "You could make an infinite loop with a yield or use float('inf')) as the counter for more versatility  \n",
     "(You can use a smaller number if you desire a certain number of elements)  \n",
     "Bounded generator was used in documentation - https://wiki.python.org/moin/Generators  \n",
     "This stopping point allows you to do things like get the sum."
@@ -2009,7 +2033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## itertools for simple infinate generator\n",
+    "## itertools for simple infinite generator\n",
     "The generator function could be simpler without having to take a max count property  \n",
     "This can be done easily with itertools. "
    ]
@@ -2231,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.9.0\n"
+      "3.7.8\n"
      ]
     }
    ],
@@ -2339,7 +2363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
